--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "imgui"]
 	path = vendor/imgui
 	url = https://github.com/ocornut/imgui
+	branch = docking
 [submodule "vendor/sdl"]
 	path = vendor/sdl
 	url = https://github.com/libsdl-org/SDL.git
+
